--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,165 +1,294 @@
 <script>
-window.location.href = '/products/pbprometer1';
+//window.location.href = '/products/pbprometer1';
 </script>
-<div class="home">
-<% content_for :subheader do %>
-  <%= render 'slider' %>
-<% end %>
-</div>
-<div class="popup-main"><div class="popup-inner"><div class="wrapper-pop">
-<div class="model-close" onclick="close_popup();">X</div>
-<div class="wrapper-container">
-<h1>Sign up</h1>
-<h4>to receive product updates<br> and special offers!</h4>
-<p>Get up to date Powerbeat news</p>
-<div class="newsletter-main">
-<div class="newsletter-inner">
-<div class="newsletter-wrap">
-<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<section>
+<div id="carousel-example" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example" data-slide-to="1"></li>
+    <li data-target="#carousel-example" data-slide-to="2"></li>
+  </ol>
 
-<style type="text/css">
-
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-
-</style>
-
-<div id="mc_embed_signup">
-
-<form action="//watteam.us10.list-manage.com/subscribe/post?u=a111cc0531d37f010c883cb18&amp;id=67cb1e31c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-
-    <div id="mc_embed_signup_scroll">
-
-	
-
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-
-<div class="mc-field-group">
-
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-
-</label>
-
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
-	 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-</div>
-
-	<div id="mce-responses">
-
-		<div class="response" id="mce-error-response" style="display:none"></div>
-
-		<div class="response" id="mce-success-response" style="display:none"></div>
-
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_67cb1e31c9" tabindex="-1" value=""></div>
-
-   
-
+  <div class="carousel-inner">
+    <div class="item active">
+      <a href="#"><img src="images/silde-1.png" /></a>
+      <div class="carousel-caption  caption-wrper">
+        
+        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
+       
+       <a class="btn-shop" href="#">Shop Now</a>
+      </div>
     </div>
-
-</form>
-
-</div>
-
-
-</div>
-</div>
-</div>
-</div></div></div>
-</div>
-<div id="welcome-message">
-  <div class="container">
-    <h1>
-      Welcome to our amazing store!
-      <br>
-      Choose <a href="/products">anything</a> you wish, we’ll ship it <a href="/products">anywhere!</a>
-    </h1>
+    <div class="item">
+      <a href="#"><img src="images/silde-1.png" /></a>
+      <div class="carousel-caption caption-wrper">
+        
+        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
+        <a class="btn-shop" href="#">Shop Now</a>
+      </div>
+    </div>
+    <div class="item">
+      <a href="#"><img src="images/silde-1.png" /></a>
+      <div class="carousel-caption caption-wrper">
+        
+        <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
+        
+        <a class="btn-shop" href="#">Shop Now</a>
+      </div>
+    </div>
   </div>
-</div>
 
-<div class="benefits-main">
-<div class="benefits-inner">
-<h2>So many benefits in such a small package</h2>
-<div class="left-benefits">
-<p>A pro level power meter you can afford</p>
-<p>Delivers both left and right data</p>
-<p>Proven technology</p>
-<p>Consumes less power</p>
-<p>Built to withstand the elements</p>
+ <!-- <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>-->
 </div>
-<div class="right-benefits">
-<p>Works with YOUR crank, YOUR bike</p>
-<p>So light you’ll never know it’s there</p>
-<p>Universal software compatibility</p>
-<p>Easy to install, easy to use</p>
-<p>Full support – always there for you</p>
-</div>
-</div>
-</div>
-<%
-=begin %>
-<!--
 <div class="container">
-  <% if @featured_products %>
-    <div id="featured-products" class="row">
-      <h3>Featured Products</h3>
-      <hr>
-      <ul class="carousel">
-        <% @featured_products.each do |product| %>
-          <%= render 'product', :product => product %>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<div class="row">
+<div class="col-xs-12">
+<div class="clearfix"></div>
+      <div class="top-to-bottom"></div>
+      </div>
 
-  <% if @latest_products %>
-    <div id="latest-products" class="row">
-      <h3>Latest Products</h3>
-      <hr>
-      <ul class="carousel">
-        <% @latest_products.sort_by{ |product| product.created_at }.reverse.each do |product| %>
-          <%= render 'product', :product => product %>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+
 </div>
--->
-<%
-=end %>
-<script type="text/javascript">
+</div>
+ </section>
+
+<section >
+  <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center title-Sellers">Best Sellers</h1>
+      <div class="col-xs-12">
+        <div class="col-sm-4 col-md-4">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+            <h2 class="text-center title-2">powerbeat</h2>
+          </div>
+        </div>
+        <div class="col-sm-4 col-md-4 ">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <h2 class="text-center title-2">accessories</h2>
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <h2 class="text-center title-2">in the news</h2>
+        </div>
+         
+        
+       <div class="clearfix"></div>
+      <div class="top-to-bottom"></div>
+        
+      </div>
+      
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class=" col-xs-12 col-md-12 col-sm-12">
+        <h1 class="text-center title-Sellers">NEW ARRIVALS</h1>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-4.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+                
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center"> Product Nam</h3>
+            <span>$499.00</span> </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center">Product with Longer Name</h3>
+            <span>$499.00</span> </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center">Product with Longer Name that needs second line</h3>
+            <span>$499.00</span> </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div id="effect-1" class="effects clearfix">
+            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), spree.account_path %>
+              <div class="overlay"> <a href="#" class="expand">+</a> 
+                <!-- <a class="close-overlay hidden">x</a> --> 
+              </div>
+            </div>
+          </div>
+          <div class="work-desc">
+            <h3 class="text-center">Product Name</h3>
+            <span>$499.00</span> </div>
+        </div>
+         <div class="clearfix"></div>
+      <div class="top-to-bottom"></div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="our-team-v-2 ">
+  <div class="container ">
+    <div class="row ">
+      <div class="col-xs-12 col-md-12 col-sm-12 ">
+        <h2 class="text-center text-heading">#watteampowerbeat on INSTAGRAM</h2>
+        <p class="lead">Follows us to  find oout the latest news and from our powerebeat team</p>
+        <div class="logo-slider">
+          <div class="bx-wrapper" style="max-width: 1540px;">
+            <div class="bx-viewport" style="width: 100%; overflow: hidden; position: relative; height: 86px;">
+              <ul class="slider2 logo-slide" style="width: 1115%; position: relative; transition-duration: 0.5s; transform: translate3d(-2380px, 0px, 0px);">
+                <li class="bx-clone">
+                <img alt="logo1" src="images/video-img1.png"></li>
+                <li class="bx-clone">
+                <img alt="logo1" src="images/video-img2.png"></li>
+                <li class="bx-clone">
+                <img alt="logo1" src="images/video-img3.png"></li>
+                <li class="bx-clone">
+                <img alt="logo1" src="images/video-img4.png"></li>
+                <li  class="bx-clone">
+                <img alt="logo1" src="images/video-img5.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img1.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img2.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img3.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img4.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img5.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img1.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img2.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img3.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img4.png"></li>
+                <li >
+                <img alt="logo1" src="images/video-img5.png"></li>
+                
+               
+              </ul>
+            </div>
+            <div class="bx-controls bx-has-pager bx-has-controls-direction">
+              <div class="bx-pager bx-default-pager">
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="0" href="">1</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="1" href="">2</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="2" href="">3</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="3" href="">4</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="4" href="">5</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link active" data-slide-index="5" href="">6</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="6" href="">7</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="7" href="">8</a></div>
+                <div class="bx-pager-item"><a class="bx-pager-link" data-slide-index="8" href="">9</a></div>
+              </div>
+              <div class="bx-controls-direction"><a href="" class="bx-prev">Prev</a><a href="" class="bx-next">Next</a></div>
+            </div>
+          </div>
+        </div>
+        <h2 class="text-center text-heading-2">view gallery ></h2>
+        <div class="top-to-bottom"></div>
+        
+      </div>
+    </div>
+    
+ 
+   </div>
+   
+</section>
+
+
+<!-- page-wrapper end --> 
+
+<!-- JavaScript files placed at the end of the document so the pages load faster
+    ================================================== --> 
+<!-- Jquery and Bootstap core js files --> 
+<script type="text/javascript" src="js/jquery.min.js"></script> 
+<script type="text/javascript" src="js/bootstrap.min.js"></script> 
+<!-- Font Awesome CSS -->
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<script src="js/modernizr.js"></script> 
+<script src="js/bxslider.min.js"></script> 
+
+<script>
 $(document).ready(function(){
-$('.subheader-wrapper').css('padding','0px');
-$('#subheader .container').css('width','100%');
-//$('#wrapper').css('position','static');	
-//$('html').css('position','relative');
-//$('html').css('overflow-x','hidden');	
-$('.flexslider').flexslider({
-    slideshowSpeed:3000,
-	animation:"fade",
-	controlNav:true,
-	directionNav:true,
-	pauseOnHover:true,
-	direction:"horizontal",
-	reverse:false,
-	animationSpeed:1000,
-	prevText:"&lt;",
-	nextText:"&gt;",
-	slideshow:true
+  $('.slider2').bxSlider({
+    slideWidth: 400,
+    auto: true,
+    minSlides: 1,
+    maxSlides: 5,
+  moveSlides: 1,
+    slideMargin: 10
   });
-$('.popup-main').fadeIn('slow');
-
 });
-
-function close_popup()
-{
-	$('.popup-main').hide();
-	$('#wrapper').css('position','relative');	
-	$('#wrapper').css('width','960px');
-}
+</script> 
+<script>
+    $(document).ready(function(){
+        if (Modernizr.touch) {
+            // show the close overlay button
+            $(".close-overlay").removeClass("hidden");
+            // handle the adding of hover class when clicked
+            $(".img").click(function(e){
+                if (!$(this).hasClass("hover")) {
+                    $(this).addClass("hover");
+                }
+            });
+            // handle the closing of the overlay
+            $(".close-overlay").click(function(e){
+                e.preventDefault();
+                e.stopPropagation();
+                if ($(this).closest(".img").hasClass("hover")) {
+                    $(this).closest(".img").removeClass("hover");
+                }
+            });
+        } else {
+            // handle the mouseenter functionality
+            $(".img").mouseenter(function(){
+                $(this).addClass("hover");
+            })
+            // handle the mouseleave functionality
+            .mouseleave(function(){
+                $(this).removeClass("hover");
+            });
+        }
+    });
 </script>
+
 
