--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,123 +1,58 @@
 <footer id="footer" class="sixteen columns" data-hook>
-
-<div class="bottom-socials-wrapper">
-            	
-                <div id="bottom-socials">
-                 	<ul class="social-icon">
-                     	<li><a id="facebook" href="https://www.facebook.com/WatteamPowerBeat" target="_blank">   <%= image_tag("f_facebook.png", :alt => "facebook", :height=>'32', :width=>'32') %></a></li>
-                        <li><a id="twitter" href="https://twitter.com/WatteamOn" target="_blank"> <%= image_tag("f_twitter.png", :alt => "twitter", :height=>'32', :width=>'32') %></a></li>
-                        <li><a id="linkdin" href="https://www.linkedin.com/company/5283843?trk=tyah&amp;trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag("f_linkedin.png", :alt => "linkedin", :height=>'32', :width=>'32') %></a></li>
-                        <li><a id="youtube" href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"><%= image_tag("f_youtube.png", :alt => "youtube", :height=>'32', :width=>'32') %></a></li>
-                    </ul>
-                </div>
-            	            </div>
-							
-							
-<div class="bottom-menu ">
-
- <div class="container">
-		<ul id="menu-foomenu" class="clearfix"><li id="menu-item-503" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-503"><a href="http://watteam.com/benefits/">Benefits</a></li>
-<li id="menu-item-504" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-504"><a href="http://watteam.com/technology/">Technology</a></li>
-<li id="menu-item-505" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-505"><a href="http://watteam.com/gallery/">Gallery</a></li>
-<li id="menu-item-502" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-13 current_page_item menu-item-502"><a href="http://watteam.com/about/">About</a></li>
-<li id="menu-item-501" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-501"><a href="http://watteam.com/partners/">Partners</a></li>
-<li id="menu-item-507" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="http://watteam.com/press/">PRESS</a></li>
-<li id="menu-item-506" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-506"><a href="http://watteam.com/faq/">FAQ</a></li>
-<li id="menu-item-500" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-500"><a href="http://watteam.com/contact/">Contact</a></li>
-</ul> 
-                   
-				   </div>
-				           </div>
-
-  <div class="container bottom-second">
+ <div class="row">
+    <div class=" col-xs-12 col-md-12 col-sm-12">
+    <div class="footer-wrper">
+    <div class="col-md-6 col-sm-6">
     
-    <div class="three columns f_left">
-     <h5>CONTACT</h5>
-    <p>  WATTEAM Headquarters, 17780<br>
-Fitch Avenue, Suite 111,<br>
-Irvine CA, 92604 USA.<br>
-<a href="mailto:support@watteam.com" onclick="__gaTracker('send', 'event', 'mailto', '/support@watteam.com');">support@watteam.com</a><br>
-+1-949-656-8540<br></p>     
+   <form class="form-inline" role="form">
+    <div class="form-group">
+      <label class="footer-title" for="email">NEWSLETTER SIGN-UP </label>
+      <input type="email" class="form-control" id="email" placeholder="Enter email">
     </div>
     
-    <div class="three columns f_mid">
-      <h5>Newsletter</h5>
-     <div id="mc_embed_signup">
-
-<form action="//watteam.us10.list-manage.com/subscribe/post?u=a111cc0531d37f010c883cb18&amp;id=67cb1e31c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-
-    <div id="mc_embed_signup_scroll">
-
-	
-
-
-
-<div class="mc-field-group">
-
-	<label for="mce-FNAME">First Name:</label>
-       	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="">
-  <label for="mce-LNAME">Last Name:</label>
-        <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" placeholder="">
-		
-		<label for="mce-EMAIL">Email:
-
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="">
-	 <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
-	 
-	 <p class="sf_required_fields_msg" id="requiredfieldsmsg"></p>
-</div>
-
-	<div id="mce-responses">
-
-		<div class="response" id="mce-error-response" style="display:none"></div>
-
-		<div class="response" id="mce-success-response" style="display:none"></div>
-
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_67cb1e31c9" tabindex="-1" value=""></div>
-
+    
+    
+  </form>
+    </div>
+    <div class="col-md-6 col-sm-6">
+      
+        <h3 class="footer-title-2">BE SOCIAL. JOIN US</h3>
+                            
+    <div class="social">
+    <ul>
+        <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-lg fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-lg  fa-instagram"></i></a></li>
+        
+        <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
+    </ul>
+</div>    
+    
    
-
     </div>
-
-</form>
-
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-
     </div>
-    
-    <div class="three columns f_right">
-      <h5>SOCIALIZE WITH US</h5>
-	  <ul class="bottom-social">
-	  <li>
-       <a href="https://www.facebook.com/WatteamPowerBeat" target="_blank"><%= image_tag 'FACEBOOK.png', :height=>'56', :width=>'56'  %></a>
-	  </li>
-	  <li>
-      <a href="https://twitter.com/WatteamOn" target="_blank"><%= image_tag 'TW.png', :height=>'56', :width=>'56' %></a>
-	  </li>
-	  <li>
-      <a href="https://www.linkedin.com/company/watteam-ltd-?trk=tyah&trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag 'LINKED.png', :height=>'56', :width=>'56' %></a>
-	  </li>
-	  <li>
-     <a href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"> <%= image_tag 'YU.png', :height=>'56', :width=>'56' %></a>
-	  </li>
-	  </ul>
-    </div>
-    
- 
-    
-  </div>
- 
-  <div id="bottom-copyright" class="clearfix">
-   <div class="container">
-                <ul class="clearfix">
-                    <li>© 2014 WATTEAM - All rights reserved</li>
-                    <li><a href="http://watteam.com/privacy-policy/">Legal</a> | <a href="http://watteam.com/terms-of-use/">Terms and Conditions</a></li>
-                </ul>
-            </div>
-			</div>
+   </div>
+   </div>
+   <div class="clear"> </div>
+   
+   
+   <div class="col-md-12 col-sm-12">
+   <div class="footer-navi-bar">
+   <ul>
+   <li><a href="#">Benefits </a>|</li>
+   <li><a href="#">Technology</a>|</li>
+   <li><a href="#">Gallery</a>|</li>
+   <li><a href="#">About</a>|</li>
+   <li><a href="#">Partners</a>|</li>
+   <li><a href="#">PRESS </a>|</li>
+   <li><a href="#">FAQ</a>|</li>
+   <li><a href="#">Contact</a></li>
+   
+   </ul>
+   ]<div class="clear"> </div>
+   </div>
+   <div class="clear"> </div>
+
 
 </footer>
