--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	
 	
@@ -10,76 +10,58 @@ $('#mobile-menu-open').click(function() {
 });
 </script>
 <header id="header" class="row" data-hook>
-<div class="header-logo-main">
-	<div class="header-container">
-  <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png', :height=>'26', :width=>'110' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
-  <div class="header-cart">
-	<a href="/cart" >CART <img src="<%= asset_path('cart.png') %>" alt="cart" height="23" width="27" /></a>
+<div class="header-top">
+  <div class="container1">
+    <div class="row">
+      <div class="col-md-5 col-sm-5"> 
+        <!-- logo -->
+        <div class="logo"> <a href="index.html"><%= link_to image_tag("logo.png", :alt => "user"), spree.account_path %></a> </div>
+      </div>
+      <div class="col-md-3 col-sm-3">
+        <div class="site-nub"> Order online or call 1.800.000.0000 </div>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <div class="top-manu">
+          <ul>
+            <li><a href="#">cart</a></li>
+            <li><a href="#">wishlist</a></li>
+            <li><a href="#">account</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
+  
+  
+  
+ <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class=""><a href="#myPage">Shop Now</a></li>
+        <li class=""><a href="#band">About Powerbeat <i class="fa fa-angle-down"></i></a> </li>
+        <li class=""><a href="#tour">Company <i class="fa fa-angle-down"></i></a></li>
+        <li class="active"><a href="#contact">Support  <i class="fa fa-angle-down"></i></a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
+          </a>
+          
+        </li>
+        
+      </ul>
+    </div>
   </div>
- </div>
-  <div class="main-menu-top">
-  <!--<%= render :partial => 'spree/shared/nav_bar' %>
-  <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>-->
-  <ul id="menu-mainmenu" class=""><li class="pro_arro"><a  href="#">PRODUCT</a>
-<ul class="sub-menu">
-	<li><a href="http://watteam.com/benefits/">Benefits</a></li>
-	<li><a href="http://watteam.com/technology/">Technology</a></li>
-	<li><a href="http://watteam.com/news/gallery/">Gallery</a></li>
-</ul>
-</li>
-<li class="pro_arro"><a href="#">COMPANY</a>
-<ul class="sub-menu">
-	<li><a href="http://watteam.com/about/">About</a></li>
-	<li><a href="http://watteam.com/partners/">Partners</a></li>
-	<li><a href="http://watteam.com/news/press/">PRESS</a></li>
-</ul>
-</li>
-<li class="pro_arro"><a href="#">SUPPORT</a>
-<ul class="sub-menu">
-	<li><a href="http://watteam.com/faq/">FAQ</a></li>
-	<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
-</ul>
-</li>
-<li><a href="https://shop.watteam.com/products/pbprometer1">Pre-Order</a></li>
-<li><a href="http://watteam.com/contact/">Contact</a></li>
-<div class="claer"></div>
-</ul>
-<div class="claer"></div>
-<a href="#" id="mobile-menu-open"></a>
-	<ul class="togle_menu_mobile" style="display:none;">
-		<li class="menu_mo">
-			<a href="#" class="mobile-product">PRODUCT</a>
-			<ul class="submenu">
-				<li><a href="http://watteam.com/benefits/">Benefits</a></li>
-				<li><a href="http://watteam.com/technology/">Technology</a></li>
-				<li><a href="http://watteam.com/news/gallery/">Gallery</a></li>
-			</ul>
-		</li>
-		<li class="menu_mo">
-			<a href="#">COMPANY</a>
-			<ul class="submenu">
-					<li><a href="http://watteam.com/about/">About</a></li>
-					<li><a href="http://watteam.com/partners/">Partners</a></li>
-					<li><a href="http://watteam.com/news/press/">PRESS</a></li>
-					<div class="claer"></div>
-			</ul>
-			<div class="claer"></div>
-		</li>
-		<li class="menu_mo">
-			<a href="#">SUPPORT</a>
-				<ul class="sub-menu">
-					<li><a href="http://watteam.com/faq/">FAQ</a></li>
-					<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
-				</ul>
-				<div class="claer"></div>
-		</li>
-		<li class="menu_mo"><a href="https://shop.watteam.com/products/pbprometer1">Pre-Order</a></li>
-		<li class="menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
-
-		<div class="claer"></div>
-	</ul>
-	<div class="claer"></div>
-  </div>
-  	<div class="claer"></div>
+</nav>
+  
+ 
+  
+</div>
 </header>
